# gen-ai-study-buddy

./: .gitignore  README.md  pyproject.toml  test_e2e_ollama.py  test_integration_providers.py
src/study_buddy/: __init__.py  main.py  models.py
src/study_buddy/agent/: session_manager.py  study_agent.py  tools.py
src/study_buddy/api/: agent_router.py  routers.py
src/study_buddy/config/: settings.py
src/study_buddy/ingestion/: chunker.py  pdf_loader.py
src/study_buddy/rag_qa/: chunking.py  embedder.py  qa.py  simple_vectorstore.py  vectorstore.py
src/study_buddy/storage/: metadata.py
src/study_buddy/ui/: app_ui.py
src/study_buddy/utils/: health_check.py
tests/rag_qa/: better_example.py  debug_chunks.py  example_usage.py  final_demo.py  simple_test.py  test_final.py  test_word_chunking.py
